# mkinitrd

./: .gitignore  .gitlab-ci.yml  Readme.md  meson.build
debian/: 31-mkinitrd  changelog  control  mkinitrd.install  rules
example/: example.hook  example.script
src/: config.sh  functions.sh  init.c  init.sh  mkinitrd.sh  mkunify.sh  modprobe.c  optparse.sh  uuid.c
src/hooks/: base.sh  eudev.sh  ext4.sh  filesystem.sh  modules.sh  storage.sh
src/scripts/: eudev.sh  ext4.sh  filesystem.sh  modules.sh  privacy.sh
